feat: lives